--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/20/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.9&#176;F</td>
+        <td class="data">88.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.5&#176;F</td>
+        <td class="data">52.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">29%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.798 inHg (-0.048)</td>
+        <td class="data">29.792 inHg (-0.052)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph WSW (248&#176;)</td>
+        <td class="data">1 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">99.2&#176;F</td>
+        <td class="data">97.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">25%</td>
+        <td class="data">26%</td>
       </tr>
     </tbody>
   </table>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:45:01 AM">
             29.913</span><br/>
-          <span title="04:15:01 PM">
-            29.794</span>
+          <span title="04:42:01 PM">
+            29.788</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:45:01 AM (Sunday)">
             29.913</span><br/>
-          <span title="04:15:01 PM (Sunday)">
-            29.794</span>
+          <span title="04:42:01 PM (Sunday)">
+            29.788</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 8 hours, 52 minutes</td>
+      <td class="data">0 days, 8 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 8 hours, 52 minutes</td>
+      <td class="data">0 days, 8 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
