--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 04:44:00 PM</p>
+    <p class="lastupdate">09/20/2020 04:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.9&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">30%</td>
+        <td class="data">31%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.792 inHg (-0.052)</td>
+        <td class="data">29.797 inHg (-0.046)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">97.4&#176;F</td>
+        <td class="data">96.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -439,11 +439,11 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          1<br/>
+          0<br/>
           11
         </td>
         <td class="data new_row hilo_week">
-          1<br/>
+          0<br/>
           11
         </td>
         <td class="data new_row hilo_month">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">77%</td>
+      <td class="data">60%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">0 days, 8 hours, 57 minutes</td>
+      <td class="data">0 days, 9 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">0 days, 8 hours, 57 minutes</td>
+      <td class="data">0 days, 9 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
