--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/20/2020 06:04:00 PM</p>
+    <p class="lastupdate">09/20/2020 06:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,13 +153,13 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">55.9<br/>
             <span class="timestamp">12:08:23 PM</span><br/>
-            46.9<br/>
-            <span class="timestamp">07:14:52 AM</span>
+            46.8<br/>
+            <span class="timestamp">06:08:49 PM</span>
           </td>
           <td class="data new_row">55.9<br/>
             <span class="timestamp">12:08:23 PM (Sunday)</span><br/>
-            46.9<br/>
-            <span class="timestamp">07:14:52 AM (Sunday)</span>
+            46.8<br/>
+            <span class="timestamp">06:08:49 PM (Sunday)</span>
           </td>
           <td class="data new_row">59.6<br/>
             <span class="timestamp">09/02/2020 01:24:38 PM</span><br/>
